--- a/teste html/index.html
+++ b/teste html/index.html
@@ -39,32 +39,15 @@
                 estamos juntos a quase 2 anos...
             </p>
     </div>
-    <!--  <div class="historias">
-        <p> Histórias</p>
-
-        <ul>
-            <li> Viagens</li>
-            <li> Jantares</li>
-            <li> Diversões</li>
-            <li> Familia</li>
-            <li> Melhores momentos</li>
-        </ul>
-    </div> -->
-
+    
     <img id="Img" src="assets/img/imagem-clique.png" width="300px" height="200px" class="Img" />
 
-
-
-
-
-
-    <div class="textMusica">
-    
-        <p>"Promessas à parte, ficaremos sempre assim &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-            Eu gostando de você e você gostando de mim..."<br>
-           <a href="https://www.youtube.com/watch?v=boPw4_DguGI"> Oriente - Pras Damas</p></a>
+     <div class="txtMusica">
+        <p>"Promessas a parte ficaremos sempre assim<br>
+            &nbsp;Eu gostando de você e você gostando de mim...""
+            <a href="https://www.youtube.com/watch?v=boPw4_DguGI"> <br>Oriente - Pras Damas</a>
+        </p>
     </div>
-
     <script src="assets/img/script/main.js"></script>
     <link href="assets/img/main.css">
 
