--- a/teste html/indexMomentos.html
+++ b/teste html/indexMomentos.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentos</title>
-    <link rel="stylesheet" href="assets/img/main.css">
+    <link rel="stylesheet" href="assets/img/css/main.css">
 </head>
 
 <body>
-    <div class="link"></div>
-    <a href="file:///C:/Users/PEDROLOU/Documents/teste%20html/index.html">  página inicial</a>
+    <div class="subt">
+        <h2> 27/10</h2>
+        <h1> Hopi Hari</h1>
+    </div>
+    
+    <div class="link">
+    <a href="index.html">  página inicial</a>
     </div>
 </body>
 
